Remove DispatchAsync to DelayAsync Move converting Dictionary to parameters to task definition for local optimizations Accept Expression to Delay Tasks
Signed-off-by: jeremyt <jeremy.tillman@live.com>

--- a/sample/AspNetCoreWebApp/Pages/Index.cshtml
+++ b/sample/AspNetCoreWebApp/Pages/Index.cshtml
@@ -5,9 +5,12 @@
     ViewData["Title"] = "QueueT Task List";
 }
 
-<ul>
-    @foreach (var taskDefinition in taskOptions.Value.Tasks)
-    {
-        <li>@taskDefinition.Name</li>
-    }
-</ul>
+<div>
+    <h1>Registered Tasks</h1>
+    <ul>
+        @foreach (var taskDefinition in taskOptions.Value.Tasks)
+        {
+            <li>@taskDefinition.Name</li>
+        }
+    </ul>
+</div>
