--- a/sample/AspNetCoreWebApp/wwwroot/css/site.css
+++ b/sample/AspNetCoreWebApp/wwwroot/css/site.css
@@ -1,8 +1,5 @@
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 15px;
 }
