--- a/sample/AspNetCoreWebApp/wwwroot/css/site.css
+++ b/sample/AspNetCoreWebApp/wwwroot/css/site.css
@@ -1,5 +1,15 @@
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
+
+body{
+    background-color: black;
+}
+
 .body-content {
     padding: 15px;
+}
+
+.full-height {
+    min-height: 100%;
+    height: 100%;
 }
